--- a/随记/随记.md
+++ b/随记/随记.md
@@ -312,3 +312,217 @@ BEM（Block Element Modifier）是一种用于给HTML和CSS命名的规则，目
 
 
 
+## 8. 前端跨域问题解决方案
+
+### 8.1 什么是跨域
+
+在前端领域中，跨域是指浏览器允许向服务器发送跨域请求，从而克服Ajax只能**同源**使用的限制。
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/e3475d7dbfc41e8a31291c5993fc72e4.png)
+
+```
+Access to fetch at 'http://localhost:8081/auth/captchaImage' from origin 'http://localhost:5173' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource. If an opaque response serves your needs, set the request's mode to 'no-cors' to fetch the resource with CORS disabled.
+```
+
+### 8.2 什么是同源策略
+
+**同源策略**是一种约定，由Netscape公司1995年引入浏览器，它是浏览器最核心也最基本的安全功能，如果缺少了同源策略，浏览器很容易受到XSS、CSFR等攻击。所谓同源是指"协议+域名+端口"三者相同，即便两个不同的域名指向同一个ip地址，也非同源。
+
+  同源策略限制以下几种行为：
+
+- Cookie、LocalStorage 和 IndexDB 无法读取
+- DOM和JS对象无法获得
+- AJAX 请求不能发送
+
+
+
+### 8.3 常见的跨域场景
+
+| URL                                                          | 说明                     | 是否允许通信 |
+| ------------------------------------------------------------ | ------------------------ | ------------ |
+| www.domain.com/a.js<br/>www.domain.com/b.js <br/>www.domain.com/lab/c.js | 同一域名，不同文件或路径 | 允许         |
+| www.domain.com:8000/a.js<br/>www.domain.com/b.js             | 同一域名，不同端口       | 不允许       |
+| http://www.domain.com/a.js<br/>https://www.domain.com/b.js   | 同一域名，不同协议       | 不允许       |
+| http://www.domain.com/a.js<br/>http://192.168.4.12/b.js      | 域名和域名对应相同ip     | 不允许       |
+| http://www.domain.com/a.js<br/>http://x.domain.com/b.js<br/>http://domain.com/c.js | 主域相同，子域不同       | 不允许       |
+| http://www.domain1.com/a.js<br/>http://www.domain2.com/b.js  | 不同域名                 | 不允许       |
+
+
+
+### 8.4 跨域解决方案
+
+跨域解决方案有很多，这里只讲两种主要的
+
+
+
+#### 8.4.1 跨域资源共享（CORS）
+
+ **CORS**是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource sharing）。 它允许浏览器向跨源服务器，发出XMLHttpRequest请求，从而克服了AJAX只能同源使用的限制。 CORS需要浏览器和服务器同时支持。目前，所有浏览器都支持该功能，IE浏览器不能低于IE10。
+
+
+
+它主要是服务器端(后端)的设置，即让后端设置cors即可让非同源的前端访问后端资源
+
+
+
+**SpringBoot配置示例**
+
+```java
+@Configuration
+public class CorsConfig implements WebMvcConfigurer {
+  @Override
+  public void addCorsMappings(CorsRegistry registry) {
+    registry.addMapping("/**") // 所有接口
+        .allowCredentials(true) // 是否发送 Cookie
+        .allowedOriginPatterns("*") // 支持域
+        .allowedMethods(new String[]{"GET", "POST", "PUT", "DELETE"}) // 支持方法
+        .allowedHeaders("*")
+        .exposedHeaders("*");
+  }
+}
+```
+
+
+
+#### 8.4.2 代理服务器
+
+这里指像vite 或者 nginx这类提供前端服务器功能的中间件配置代理，可以让前端请求转发到跨域的后端
+
+它主要是前端的设置，但是如果你的前端服务并没有服务器，或者服务器不支持代理的话，那么请使用CORS或者其他方案
+
+**vite配置示例**
+
+```js
+server: {
+  // 指定dev sever的端口号，默认为5173
+  port: env.VITE_APP_PORT,
+  // 自动打开浏览器运行以下页面
+  // open: '/',
+  // 设置反向代理
+  proxy: {
+    // 以下示例表示：请求URL中含有"/api"，则反向代理到http://localhost
+    // 例如: http://localhost:3000/api/login -> http://localhost/api/login
+    // 如果反向代理到localhost报错Error: connect ECONNREFUSED ::1:80，
+    // 则将localhost改127.0.0.1
+    '/api': {
+      target: env.VITE_API_URL,
+      changeOrigin: true,
+      rewrite: (path) => path.replace(/^\/api/, ''),
+    },
+  },
+},
+```
+
+
+
+#### 8.4.3 两种方式的对比
+
+CORS可以是最直接的解决方案，但是其暴露了域名，可能有受攻击的风险
+
+代理服务器没有暴露域名，但是其需要经过一层代理可能减慢系统速度
+
+
+
+## 9. 使用husky规范前端工程
+
+`husky`是一个`Git hooks`工具，能够在项目中配置hooks脚本；当我们执行git操作时，自动触发配置的脚本；常用的hooks有`pre-commit`和`commit-message`。
+
+
+
+安装`husky`
+
+```bash
+pnpm install husky -D
+```
+
+在`package.json`中添加`prepare`命令
+
+```json
+// package.json
+"scripts": {
+    // 新增这一行
+    "prepare": "husky install", 
+    ...
+},
+```
+
+> 设置prepare命令的目的是：**在其他用户执行npm install后会自动执行husky install**；
+>
+> 执行`husky install`时，会使用git命令配置`core.hooksPath`，将其设置成`.husky`;
+>
+> 配置完成后，在项目中执行`npm prepare`(也就是执行了husky install)；
+>
+> 执行完成后，会在项目根目录生成一个`.husky`文件夹，
+
+
+
+`commitlint`会检测你的git commit提交message是否符合规范，详情查看[约定式规范](https://www.conventionalcommits.org/zh-hans/v1.0.0/)
+
+安装`commitlint`
+
+```bash
+pnpm add @commitlint/cli @commitlint/config-conventional -D
+```
+
+创建`commitlint.config.js`文件，用于配置commitlint校验规则。
+
+```js
+export default {
+  extends: ['@commitlint/config-conventional'], // 检测规则
+  rules: {}
+}
+```
+
+在`package.json`中添加`commitlint`命令
+
+```bash
+// package.json文件
+scripts:{
+    "commitlint": "commitlint --config commitlint.config.js -e -V",
+    ...
+}
+```
+
+
+
+添加`commit-msg` `hooks`
+
+```bash
+npx husky add .husky/commit-msg 'npm run commitlint'
+```
+
+这样在下次提交代码时就会检测你的提交信息是否符合规范
+
+
+
+## 10.前端服务器 快速预览效果
+
+使用`serve`
+
+```bash
+npx serve <前端项目打包目录>
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/0dc49346184bca69d73475cfced1ad02.png)
+
+这样就运行起了项目
+
+
+
+## 11. nuxt导致的window、document对象消失的解决方案
+
+常规的vue项目需要在浏览器中解析js并通过js生成页面，而某些场景下，需要渲染好的静态页面(搜索引擎搜索并生成信息；静态页面加快加载速度)，因此出现了服务端渲染技术SSR，原理就是先生成普通vue项目文件，然后使用爬虫生成各个页面的内容，从而生成静态的内容
+
+nuxt作为vue派系的服务端渲染框架，它的原理也是类似。在运行爬虫的过程中（不是浏览器环境），没有`window`、`document`对象，所以会出现`window is not defined`
+
+对于这种问题,nuxt官方也有对应的解决方案，即在需要使用`window`、`document`对象的组件外层包裹`client-only`标签，让其单独加载，但是也有情况是你尽管使用该标签仍然报错
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/53656a5b0eabb683254efe18904d69ec.png)
+
+比如我这个`three.js`项目，中只要引入了`three.js`相关的模块，就会产生报错
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/27867a1ee9d8b8073bc8ab5c88a710b5.png)
+
+所以需要使用动态加载模块
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/1dc6feb3ec440b13f2a0ae734ed2df1d.png)
