--- a/随记/终端美化.md
+++ b/随记/终端美化.md
@@ -105,3 +105,37 @@ oh-my-posh init pwsh --config ~/.omp.theme.json | Invoke-Expression
 7. 关闭启动时的banner，添加`-nologo`项即可
 
 ![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/3714b3074d1258af263f5a066f6e03c5.png)
+
+
+
+## 5. 使用自动补全
+
+1. 先安装最新的`PowerShellGet`
+
+```bash
+Install-Module -Name PowerShellGet -Force
+Exit
+```
+
+2. 再安装`PSReadLine`
+
+```bash
+Install-Module PSReadLine -AllowPrerelease -Force
+```
+
+3. 在`powsershell`输入
+
+```bash
+notepad.exe $PROFILE
+```
+
+4. 在打开的界面输入下面内容
+
+```bash
+Set-PSReadLineKeyHandler -Key Tab -Function MenuComplete #Tab键会出现自动补全菜单
+Set-PSReadlineKeyHandler -Key UpArrow -Function HistorySearchBackward
+Set-PSReadlineKeyHandler -Key DownArrow -Function HistorySearchForward
+# 上下方向键箭头，搜索历史中进行自动补全
+```
+
+5. 保存重启`powershell`即可
