--- a/随记/随记.md
+++ b/随记/随记.md
@@ -190,23 +190,44 @@ viteCompression({
 然后配置Nginx
 
 ```
-server{
-    #gzip
-    #开启gzip功能
-    gzip on; 
-    #开启gzip静态压缩功能
-    gzip_static on; 
-    #gzip缓存大小
-    gzip_buffers 4 16k;
-    #gzip http版本
-    gzip_http_version 1.1;
-    #gzip 压缩级别 1-10 
-    gzip_comp_level 5;
-    #gzip 压缩类型
-    gzip_types text/plain application/javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png; 
-    gzip_vary on; 
-}
+#gzip
+#开启gzip功能
+gzip on;
+#开启gzip静态压缩功能
+gzip_static on;
+#gzip缓存大小
+gzip_buffers 4 16k;
+#gzip http版本
+gzip_http_version 1.1;
+#gzip 压缩级别 1-10  推荐5 效率和压缩效果均衡
+gzip_comp_level 5;
+#压缩的最小体积
+gzip_min_length 10k;
+gzip_proxied any;
+gzip_vary on;
+gzip_types
+  application/javascript
+  application/x-javascript
+  text/javascript
+  text/css
+  text/xml
+  application/xhtml+xml
+  application/xml
+  application/atom+xml
+  application/rdf+xml
+  application/rss+xml
+  application/geo+json
+  application/json
+  application/ld+json
+  application/manifest+json
+  application/x-web-app-manifest+json
+  image/svg+xml
+  text/x-cross-domain-policy;
+#在IE 1-6 中禁用
+gzip_disable "MSIE [1-6]\.";
 ```
+
+> **注：只需要配置nginx 的gzip 压缩即可，同时gzip压缩依赖服务器性能，当压缩级别过高时，可能会导致服务器CPU压力过大，速度反而不如不压缩的**
 
 压缩前
 
@@ -627,3 +648,154 @@ PermitRootLogin yes
 sudo systemctl restart sshd # 重启 ssh 服务以应用更改
 ```
 
+## 16.在nuxt中使用vite插件
+
+正常安装插件，将插件注册在`vite` 属性中即可
+
+```ts
+import vsharp from 'vite-plugin-vsharp'
+import viteCompression from 'vite-plugin-compression'
+// https://nuxt.com/docs/api/configuration/nuxt-config
+export default defineNuxtConfig({
+  devtools: { enabled: true },
+  devServer: {
+    port: 3005,
+  },
+  vite: {
+    plugins: [
+      // 图片压缩
+      vsharp(),
+      // 代码gzip压缩
+      viteCompression({
+        verbose: true, // 控制台输出压缩结果
+        disable: true, // 禁用
+        threshold: 10240, // 文件大小大于这个值时启用压缩
+        algorithm: 'gzip', // 压缩算法
+        ext: '.gz', // 压缩后缀
+        deleteOriginFile: false, // 是否删除原文件
+        compressionOptions: {
+          // 压缩级别
+          level: 9,
+        },
+      }),
+    ],
+  },
+  // 剩余的配置...
+})
+```
+
+## 17.使用图片压缩插件
+
+安装
+
+```bash
+pnpm add -D import vite-plugin-vsharp
+```
+
+使用
+
+```ts
+plugins: [
+    // 图片压缩
+    vsharp(),
+]
+```
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/b61ad224151d9b4dd746504e7bd81e9b.png)
+
+
+
+## 18. 打包移除console
+
+使用console打印对象时可能会产生内存泄漏，所以在生产环境中尽量不要出现console，在vite中可以使用esbuild配置实现自动去除console
+
+```ts
+esbuild: {
+  // 移除console和debugger
+  drop: ['console', 'debugger'],
+},
+```
+
+
+
+## 19. Nginx访问频率控制
+
+HTTP服务器的吞吐率（单位时间吞吐量）通常有一个上限，尤其是普通配置的机器，在带宽够的情况下，用压测工具经常能把服务器压出翔，为了线上环境稳定性，防止恶意攻击影响到其他用户，可选择对客户端访问频率进行合理限制。
+
+**限制原理**
+
+限制原理并不难，可一句话概括为：“根据客户端特征，限制其访问频率”，客户端特征主要指IP、UserAgent等。使用IP比UserAgent更可靠，因为IP无法造假，UserAgent可随意伪造。
+
+虽然IP无法造假，但恶意人员可以利用代理，因此仅依靠限制IP访问频率并不能应对大量代理的情况，另外在限制IP访问频率时也要考虑多用户共享网络出口的情况，比如校园网、企业局域网网络之类。
+
+### 19.1 Nginx中的限制方案
+
+**limit_req_zone**
+
+```bash
+Syntax:  limit_req_zone key zone=name:size rate=rate;
+Default: —
+Context: http
+```
+
+- key，表示作为限制的请求特征，可以包含文本与变量，IP场景使用`$binary_remote_addr`
+- name，zone的名称，`limit_req`会用到
+- size，zone的大小，1M大小在64位系统可存储8000个state(ip、count...)，每次添加新state时，可能删除至多两个前60秒未使用的state，若添加新state时zone大小不够，则删除较旧的state，释放空间后依旧不够返回503
+- rate，访问速率，支持秒或者分钟为单位，但nginx内部使用毫秒追踪请求数，如果限制是10r/1s，实际上是1r/100ms
+
+**limit_req**
+
+```bash
+Syntax:  limit_req zone=name [burst=number] [nodelay];
+Default: —
+Context: http, server, location
+```
+
+- name，`limit_req_zone`中配置的名称
+- burst，可理解为缓冲卡槽，如果设置则所有请求都经由缓冲卡槽转发给upstream，通常可并发接收的请求数为`number + 1`，但当number为0时会拒绝所有请求
+- nodelay，缓冲卡槽中请求转发给upstream的时机，不设置时，会按照zone的速率逐个转发，当设置为nodelay时，请求到达缓冲卡槽后会立即转发给upstream，但卡槽中的占位依旧按照频率释放
+
+### 19.2 配置Nginx
+
+理解`limit_req_zone`与`limit_req`之后，感叹这真是个好设计，也知道它背后的形象的名称：[漏桶算法](https://baike.baidu.com/item/漏桶算法)。
+
+了解配置方式后开始实际操作，在Nginx配置中的http内添加：
+
+```text
+limit_req_zone $binary_remote_addr zone=one:2m rate=10r/s;
+```
+
+在需要限制的server内添加：
+
+```text
+limit_req zone=one burst=10 nodelay;
+```
+
+按照官方文档，2M大小在64位系统中大约可存储16000个状态数据，针对自己的个人网站足够，10r/s即1r/100ms，配合burst=10应该也OK，重启Nginx，然后使用压测工具检验一下。
+
+rate、burst、nodelay的不同特点：
+
+> 排除其他因素，rate的大小针对同一客户端的平均吞吐率起到决定性作用，而burst与nodelay可根据业务需求选择，burst越大可接收的并发请求越多，但rate跟不上可能导致大量客户端请求超时，nodelay在rate较小时可以提升业务在瞬时的吞吐率表现
+
+### 19.3 白名单
+
+之所以会限制IP访问频率，主要是为了阻止外部调用者的恶意行为，但经过上述配置后，对系统内部调用者同样会有所限制，因此我们希望将内部调用者列入白名单内，使其不受访问频率限制。
+
+这主要借助Nginx中的geo与map功能，通过geo将IP映射成值，然后再通过map将值映射成变量或常量，恰好`limit_req_zone`中如果key为`''`表示不对其进行频率限制，所以只需要将白名单用户的key设置为`''`。
+
+修改配置文件中http的内容：
+
+```text
+geo $limit {
+    default 1;
+    127.0.0.1 0;     # 本机地址
+    172.31.0.0/16 0; # 内网地址
+}
+ 
+map $limit $limit_key {
+    0 "";
+    1 $binary_remote_addr;
+}
+
+limit_req_zone $limit_key zone=one:2m rate=10r/s;
+```
