--- a/随记/随记.md
+++ b/随记/随记.md
@@ -799,3 +799,61 @@ map $limit $limit_key {
 
 limit_req_zone $limit_key zone=one:2m rate=10r/s;
 ```
+
+
+
+## 20. tree-node-cli命令的使用
+
+首先安装`tree-node-cli`
+
+```bash
+npm install tree-node-cli -g
+```
+
+然后使用命令`tree`或者`treee`(`tree`命令可能与本机命令冲突)
+
+比如展示一个前端项目的目录结构
+
+- 命令
+
+```bash
+tree -I "node_modules" --dirs-first
+```
+
+- 结果
+
+```bash
+ioptimize-pro
+├── public
+│   └── favicon.ico
+├── src
+│   ├── apis
+│   ├── assets
+│   ├── components
+│   ├── config
+│   ├── hooks
+│   ├── layouts
+│   ├── locales
+│   ├── router
+│   │   └── index.ts
+│   ├── stores
+│   │   ├── modules
+│   │   └── index.ts
+│   ├── styles
+│   ├── utils
+│   ├── views
+│   ├── App.vue
+│   └── main.ts
+├── README.md
+├── env.d.ts
+├── index.html
+├── package.json
+├── pnpm-lock.yaml
+├── tsconfig.app.json
+├── tsconfig.json
+├── tsconfig.node.json
+├── tsconfig.vitest.json
+├── vite.config.ts
+└── vitest.config.ts
+```
+
