--- a/blog/juejin/搭建一个通用的后台框架.md
+++ b/blog/juejin/搭建一个通用的后台框架.md
@@ -499,6 +499,211 @@ server: {
 
 
 
+### 1.5 Git commit规范与husky
+
+[Git commit 约定式规范](https://www.conventionalcommits.org/zh-hans/v1.0.0/) 简单介绍
+
+> **commit message格式**
+>
+> ```text
+> <type>(<scope>): <subject>
+> ```
+>
+> **type(必须)**
+>
+> 用于说明git commit的类别，只允许使用下面的标识。
+>
+> feat：新功能（feature）。
+>
+> fix/to：修复bug，可以是QA发现的BUG，也可以是研发自己发现的BUG。
+>
+> - fix：产生diff并自动修复此问题。适合于一次提交直接修复问题
+> - to：只产生diff不自动修复此问题。适合于多次提交。最终修复问题提交时使用fix
+>
+> docs：文档（documentation）。
+>
+> style：格式（不影响代码运行的变动）。
+>
+> refactor：重构（即不是新增功能，也不是修改bug的代码变动）。
+>
+> perf：优化相关，比如提升性能、体验。
+>
+> test：增加测试。
+>
+> chore：构建过程或辅助工具的变动。
+>
+> revert：回滚到上一个版本。
+>
+> merge：代码合并。
+>
+> sync：同步主线或分支的Bug。
+
+
+
+`husky`是一个`Git hooks`工具，能够在项目中配置hooks脚本；当我们执行git操作时，自动触发配置的脚本；常用的hooks有`pre-commit`和`commit-message`。
+
+
+
+安装`husky`
+
+```bash
+pnpm install husky@8.0.3 -D
+```
+
+在`package.json`中添加`prepare`命令
+
+```json
+// package.json
+"scripts": {
+    // 新增这一行
+    "prepare": "husky install", 
+    ...
+},
+```
+
+> 设置prepare命令的目的是：**在其他用户执行npm install后会自动执行husky install**；
+>
+> 执行`husky install`时，会使用git命令配置`core.hooksPath`，将其设置成`.husky`;
+>
+> 配置完成后，在项目中执行`npm prepare`(也就是执行了husky install)；
+>
+> 执行完成后，会在项目根目录生成一个`.husky`文件夹，
+
+使用husky 可以在提交git 时触发commit检查 或者 格式化代码
+
+
+
+使用`commitlint`会检测你的git commit提交message是否符合规范，详情查看[约定式规范](https://www.conventionalcommits.org/zh-hans/v1.0.0/)
+
+安装`commitlint`
+
+```bash
+pnpm add @commitlint/cli @commitlint/config-conventional -D
+```
+
+创建`commitlint.config.js`文件，用于配置commitlint校验规则。
+
+```js
+export default {
+  extends: ['@commitlint/config-conventional'], // 检测规则
+  rules: {}
+}
+```
+
+在`package.json`中添加`commitlint`命令
+
+```bash
+// package.json文件
+scripts:{
+    "commitlint": "commitlint --config commitlint.config.js -e -V",
+    ...
+}
+```
+
+添加`pre-commit` `hooks`
+
+```bash
+npx husky add .husky/commit-msg 'npm run format'
+npx husky add .husky/commit-msg 'npm run type-check'
+```
+
+添加`commit-msg` `hooks`
+
+```bash
+npx husky add .husky/commit-msg 'npm run commitlint'
+```
+
+这样在下次提交代码时就会
+
+1. 格式化代码
+
+2. 检测你的提交信息是否符合规范
+3. 类型检查
+
+
+
+### 1.6 postcss&图片压缩&移除console和debugger
+
+postcss用于转换css，它通过插件来转换css。我们这里需要使用的是它的postcss-preset-env插件
+
+> postcss-preset-env 是一个 PostCSS 插件，它提供了一种简化处理现代 CSS 的方式。它允许你使用最新的 CSS 语法和特性，而无需担心浏览器兼容性问题。
+>
+> 使用 postcss-preset-env，你可以在 CSS 中使用最新的 CSS 规范，如 CSS Custom Properties、CSS Grid、CSS Variables、嵌套规则、自动前缀等，并且它会根据目标浏览器的配置自动转换这些规范，以确保在不同浏览器中的兼容性
+
+首先安装`postcss-preset-env`
+
+```bash
+pnpm install postcss-preset-env -D
+```
+
+在vite.config.ts中添加配置
+
+```ts
+css: {
+  postcss: {
+    plugins: [postcssPresetEnv()],
+  },
+},
+```
+
+
+
+图片压缩我们使用vsharp，它可以大幅度减小图片的大小
+
+> 使用nginx配置gzip也能压缩图片，但是gzip压缩需要消耗服务器CPU资源，对于性能弱的服务器可能不是很好的选择。
+
+安装vsharp
+
+```bash
+pnpm install vite-plugin-vsharp -D
+```
+
+添加插件
+
+```ts
+plugins: [
+  vue(),
+  eslintPlugin(),
+  // 图片压缩
+  vsharp(),
+  ...
+],
+```
+
+
+
+生产环境移除console有利于减小出现内存泄漏的问题(console内存泄漏问题)，或者卡debugger的问题。
+
+我们可以直接使用esbuild内置的移除console和debugger配置
+
+```ts
+esbuild: {
+  // 移除console和debugger
+  drop: ['console', 'debugger'],
+},
+```
+
+
+
+最后同步一下package.json中的命令即可
+
+```json
+"scripts": {
+  "prepare": "husky install",
+  "dev": "vite --host",
+  "build": "run-p type-check \"build-only {@}\" --",
+  "preview": "vite preview",
+  "build-only": "vite build",
+  "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+  "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+  "commitlint": "commitlint --config commitlint.config.js -e -V",
+  "format": "prettier --write ./",
+  "test:unit": "vitest"
+},
+```
+
+
+
 ## 2. 布局框架设计
 
 ### 2.1 基础跳转功能
@@ -659,13 +864,13 @@ BasicLayout.vue
 
 ![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/94c19ab97ec19aeb0ffc85dfa74ea633.png)
 
-### 2.2 暗亮色模式和多主题功能
+### 2.2 暗亮色模式和多主题功能*
 
 这里框架提出一种全新的暗亮色和多主题方案，理解该概念，可以将其运用于其他任何框架和组件库中。
 
 相关讲解可参考之前的视频[【前端】如何实现动态主题-sass+ant-design-vue_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1u94y1C7mf/)
 
-> 注：暗亮色和主题的切换为该框架的核心内容之一，需要读者对`sass`、`pinia`、`响应式数据`、`计算属性`、`持久化`、`sass与js的转换`、`js操作css变量`等有一定的理解
+> 注：**暗亮色和主题的切换为该框架的核心内容之一**，需要读者对`sass`、`pinia`、`响应式数据`、`计算属性`、`持久化`、`sass与js的转换`、`js操作css变量`等有一定的理解
 
 首先在`styles`目录下创建`theme.scss`和`variables.module.scss`两个文件
 
