--- a/C++/数据结构与算法/算法随记/算法随记.md
+++ b/C++/数据结构与算法/算法随记/算法随记.md
@@ -11,26 +11,67 @@
 
 using namespace std;
 
-int binarySearch(int* nums, int target, int left, int right)
+/// \brief 二分查找值的索引
+/// \param a 数组
+/// \param t 目标
+/// \param l 左边
+/// \param r 右边
+/// \return 索引
+int binary_search(int a[], int t, int l, int r)
 {
-	//二分查找
-	if(left>right) return -1;
-	int mid = (left+right)/2;
-	if(nums[mid] == target) return mid;
-	if(nums[mid] < target) return binarySearch(nums, target, mid+1, right);
-	if(nums[mid] > target) return binarySearch(nums, target, left, mid-1);
-}
-int search(int* nums, int numSize, int target)
-{
-	return binarySearch(nums, target, 0, numSize-1);
+    if (l > r) return -1;
+    int m = (l + r) >> 1;
+    if (a[m] == t) return m;
+    if (a[m] < t) return binary_search(a, t, m + 1, r);
+    if (a[m] > t) return binary_search(a, t, l, m - 1);
 }
 
 int main()
 {
-	int nums[7] = {-1 ,2, 5, 6, 7, 8, 9};
-	int index = search(nums, 7, 5);
-	cout<<index<<endl;
-	return 0;
+    int nums[7] = {-1, 2, 5, 6, 7, 8, 9};
+    int index = binary_search(nums, 5, 0, 7);
+    cout << index << endl;
+    return 0;
+}
+
+```
+
+
+
+## 快速排序
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+/// \brief 快速排序 从小到大
+/// \param a 数组
+/// \param l 左边
+/// \param r 右边
+void quick_sort(int a[], int l, int r)
+{
+    if (l >= r) return;
+    int i = l - 1, j = r + 1, x = a[l + r >> 1];
+    while (i < j)
+    {
+        while (a[++i] < x);
+        while (a[--j] > x);
+        if (i < j) swap(a[i], a[j]);
+    }
+    quick_sort(a, l, j);
+    quick_sort(a, j + 1, r);
+}
+
+int main()
+{
+    int arr[] = {4, 23, 14, 1, 41, 47};
+    quick_sort(arr, 0, sizeof(arr) / sizeof(int) - 1);
+    for (auto x : arr)
+    {
+        cout << x << " ";
+    }
+    return 0;
 }
 ```
 
