--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -607,93 +607,251 @@ plt.legend(["上海", "北京"],loc="best")
 
 
 
-## 3. numpy
+## 3. K-近邻算法
 
-### 3.1 numpy介绍
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2069dce32cd1b284fa8b83b8eaa32710.png)
 
-Numpy（Numerical Python）是一个开源的Python科学计算库，用于快速处理任意维度的数组。
+- 根据你的“邻居”来推断出你的类别
 
-Numpy支持常见的数组和矩阵操作。对于同样的数值计算任务，使用Numpy比直接使用Python要简洁的多。 
+### 3.1 K-近邻算法(KNN)概念
 
-Numpy使用ndarray对象来处理多维数组，该对象是一个快速而灵活的大数据容器。
+> K Nearest Neighbor 算法⼜叫 KNN 算法，这个算法是机器学习⾥⾯⼀个⽐较经典的 算法，  总体来说 KNN 算法是相对⽐较容易理解的算法
 
+定义
 
+- 如果⼀个样本在特征空间中的 **k 个最相似 ( 即特征空间中最邻近 ) 的样本中的大多数属于某⼀个类别**，则该样本也属于这个类别。
 
-### 3.2 ndarray
+距离公式
 
-#### 3.2.1 ndarray介绍
+- 两个样本的距离可以通过如下公式计算，又叫欧式距离 
 
-NumPy提供了一个N维数组类型ndarray，它描述了**相同类型**的“items”的集合。
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/3b6706ceaccec4246824814f571d88f2.png)
 
+**电影类型分析**
 
+假设我们现在有几部电影
 
-#### 3.2.2 ndarray 的优势
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/dd33af3eb837c399cd8d5c0bd50f845f.png)
 
-ndarray比python原生的list要快得多，因此在数据处理方面ndarray比较擅长
+其中?号电影不知道类别，如何去预测?我们可以利用K近邻算法的思想
 
-##### 3.2.2.1 内存块风格
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/50761f428a319e514ece6f7cbc4e707f.png)
 
-ndarray到底跟原生python列表有什么不同呢
+分别计算每个电影和被预测电影的距离，然后求解
 
-![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/80151732d121bedd796d87c8e378f01c.png)
-
-从图中我们可以看出ndarray在存储数据的时候，数据与数据的地址都是连续的，这样就给使得批量操作数组元素时速度更快。
-
-##### 3.2.2.2  ndarray支持并行化运算（向量化运算）
-
-numpy内置了并行运算功能，当系统有多个核心时，做某种计算时，numpy会自动做并行计算
-
-##### 3.2.2.3 效率远高于纯Python代码
-
-Numpy底层使用C语言编写，内部解除了GIL（全局解释器锁），其对数组的操作速度不受Python解释器的限制，所以，其效率远高于纯 Python代码。
+![image-20240214110701492](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/c2ecae7473d6b1e2394317c4ba9361ec.png)
 
 
 
-### 3.3 ndarray的使用
+**算法流程总结**
 
-#### 3.3.1 属性
+1. 计算已知类别数据集中的点与当前点之间的距离
+2. 按距离递增次序排序
+3. 选取与当前点距离最小的k个点
+4. 统计前k个点所在的类别出现的频率
+5. 返回前k个点出现频率最高的类别作为当前点的预测分类
 
-数组属性反映了数组本身固有的信息。
-
-| 属性名字         | 属性解释                   |
-| ---------------- | -------------------------- |
-| ndarray.shape    | 数组维度的元组             |
-| ndarray.ndim     | 数组维数                   |
-| ndarray.size     | 数组中的元素数量           |
-| ndarray.itemsize | 一个数组元素的长度（字节） |
-| ndarray.dtype    | 数组元素的类型             |
+### 3.2 k近邻算法api使用
 
 
 
-#### 3.3.2 类型
+```py
+# 导入模块
+from sklearn.neighbors import KNeighborsClassifier
 
-```python
->>> type(score.dtype)
-<type 'numpy.dtype'>
+# 1. 构建数据集
+"""
+解释数据集
+    当y=0时 x为 1 或者 2 knn会推断出x距离1到2更近的数据 y=0
+    当y=1时 x为 10 或者 20 knn会推断出x距离10到20更近的数据 y=1
+"""
+x = [[1], [2], [10], [20]]
+y = [0, 0, 1, 1]
+# 2. 模型训练
+# 2.1 机器学习 KNN 分类器
+knn = KNeighborsClassifier(n_neighbors=2)
+# 2.2 使用fit方法训练
+knn.fit(x, y)
+# 3.3 使用predict方法预测
+print(knn.predict([[1.5]]))  # 输出：[0]
+print(knn.predict([[15]]))  # 输出：[1]
 ```
 
-dtype是numpy.dtype类型，先看看对于数组来说都有哪些类型
 
-![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/94266e1731d4e5f6ccf9627bbe60d02d.png)
 
-创建数组的时候指定类型
+### 3.3 距离度量
 
-```python
->>> a = np.array([[1, 2, 3],[4, 5, 6]], dtype=np.float32)
->>> a.dtype
-dtype('float32')
->>> arr = np.array(['python', 'tensorflow', 'scikit-learn', 'numpy'], dtype = np.string_)
->>> arr
-array([b'python', b'tensorflow', b'scikit-learn', b'numpy'], dtype='|S12')
+#### 3.3.1 距离公式的基本性质
+
+在机器学习过程中，对于函数$dist(.,.)$，若它是一"距离度量"(distance measure)，则需满足一些基本性质:
+
+- 非负性: $dist(X_i,X_j)>=0$;
+- 同一性: $dist(x_i,x_j)=0$。当且仅当$X_i=X_i$;
+- 对称性: $dist(x_i,x_j)= dist(x_j,x_i)$;
+- 直递性: $dist(x_i,x_j)<= dist(x_i,x_k) + dist(x_k,x_j)$
+
+> 直递性常被直接称为“三角不等式”
+
+#### 3.3.2 常见的距离公式
+
+##### 3.3.2.1 欧式距离
+
+![image-20240214112933958](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/2b581590c5e50bc86f37495bf63ee141.png)
+
+举例
+
+```py
+# 四个点之间的欧式距离 有六个值 四个点相互组合便有6个点
+X=[[1,1],[2,2],[3,3],[4,4]]
+d = 1.4142 2.8284 4.2426 1.4142 2.8284 1.4142
 ```
 
-注意：若不指定，整数默认int64，小数默认float64
+
+
+##### 3.3.2.2 曼哈顿距离
+
+在曼哈顿街区要从一个十字路口开车到另一个十字路口，驾驶距离显然不是两点间的直线距离。这个实际驾驶距离就是“曼哈顿距离”。曼哈顿距离也称为“城市街区距离”(City Block distance)。
+
+![image-20240214113319342](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/57f90ad869f2ce20f81b7d18f0aaf2aa.png)
+
+![image-20240214113330364](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/0898ee9c1b4eca434d2f6e729ba0f13a.png)
+
+##### 3.3.2.3 切比雪夫距离
+
+国际象棋中，国王可以直行、横行、斜行，所以国王走一步可以移动到相邻8个方格中的任意一个。国王从格子(x1,y1)走到格子(x2,y2)最少需要多少步?这个距离就叫切比雪夫距离。
+
+![image-20240214115029178](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/e8eda9e7498b371cdb599ef197e74e35.png)
+
+![image-20240214115044536](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/a21885dfeb114acedaf3f3a9e14ba975.png)
+
+##### 3.3.2.4 闵可夫斯基距离
+
+闵氏距离不是一种距离，而是一组距离的定义，是对多个距离度量公式的概括性的表述两个n维变量a(x11,x12,...,x1n)与b(x21,x22,...,x2n)间的闵可夫斯基距离定义为
+
+![image-20240214210014560](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/f2e81855f87e41c0f53b770dc7e69c7c.png)
+
+其中p是一个变参数
+
+- 当p=1时，就是曼哈顿距离;
+- 当p=2时，就是欧氏距离;
+- 当p->∞时，就是切比雪夫距离
+
+根据p的不同，闵氏距离可以表示某一类/种的距离。
 
 
 
-#### 3.3.3 生成数组
+**闵氏距离的缺点**
 
-- np.ones(shape, dtype)
-- np.ones_like(a, dtype)
-- np.zeros(shape, dtype)
-- np.zeros_like(a, dtype
+1. 将各个分量的量纲(scale)，也就是“单位”相同的看待了
+2. 未考虑各个分量的分布 (期望，方差等)可能是不同的
+
+
+
+### 3.4 k值的选择
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/443c6b6d1c22aa571168ad3fc0d7229a.png)
+
+- K值过小:
+  - 容易受到异常点的影响
+- k值大
+  - 受到样本均衡的问题
+
+---
+
+**K值选择问题，李航博士的一书 ⌈统计学习方法⌋ 上所说:**
+
+1. 选择较小的K值，就相当于用较小的领域中的训练实例进行预测，“学习”近似误差会减小，只有与输入实例较近或相似的训练实例才会对预测结果起作用，与此同时带来的问题是“学习”的估计误差会增大，换句话说，**K值的减小就意味着整体模型变得复杂，容易发生过拟合;**
+
+2. 选择较大的K值，就相当于用较大领域中的训练实例进行预测，其优点是可以减少学习的估计误差，但缺点是学习的近似误差会增大。这时候，**与输入实例较远 (不相似的)训练实例也会对预测器作用，使预测发生错误，且K值的增大就意味着整体的模型变得简单。**
+
+3) K=N(N为训练样本个数)，则完全不足取，因为此时无论输入实例是什么，都只是简单的预测它属于在训练实例中最多的类，模型过于简单，忽略了训练实例中大量有用信息。
+**在实际应用中，K值一般取一个比较小的数值**，例如采用交叉验证法(简单来说，就是把训练数据在分成两
+组:训练集和验证集)来选择最优的K值。
+
+---
+
+近似误差:
+
+- 对现有训练集的训练误差，关注训练集
+- 如果近似误差过小可能会出现过拟合的现象，对现有的训练集能有很好的预测，但是对未知的测试样本将会出现较大偏差的预测。
+- 模型本身不是最接近最佳模型
+
+估计误差:
+
+- 可以理解为对测试集的测试误差，关注测试集，
+- 估计误差小说明对未知数据的预测能力好.
+- 模型本身最接近最佳模型。
+
+
+
+### 3.5 kd树
+
+实现k近邻算法时，**主要考虑的问题是如何对训练数据进行快速k近邻搜索**
+
+这在特征空间的维数大及训练数据容量大时尤其必要。
+
+**k近邻法最简单的实现是线性扫描(穷举搜索)，即要计算输入实例与每一个训练实例的距离。计算并存储好以后，再查找K近邻**。当训练集很大时，计算非常耗时。
+
+为了提高KNN搜索的效率，可以考虑使用特殊的结构存储训练数据，以减小计算距离的次数。
+
+#### 3.5.1 kd树简介
+
+根据**KNN**每次需要预测一个点时，我们都需要计算训练数据集里每个点到这个点的距离，然后选出距离最近
+的k个点进行投票。**当数据集很大时，这个计算成本非常高。**
+
+**kd树**:为了避免每次都重新计算一遍距离，算法会把距离信息保存在一棵树里，这样在计算之前从树里查询距离信息，尽量避免重新计算。其基本原理是，**如果A和B距离很远，B和C距离很近，那么A和C的距离也很远**。有了这个信息，就可以在合适的时候跳过距离远的点。
+
+这样优化后的算法复杂度可降低到**O(DNIog (N))**。感兴趣的读者可参阅论文: Bentley，J.L,Communications of the ACM (1975) 。
+
+1989年，另外一种称为**Ball Tree**的算法，在kd Tree的基础上对性能进一步进行了优化。感兴趣的读者可以
+搜索**Five balltree construction algorithms**来了解详细的算法信息。
+
+**原理**
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/d6b002f47ea54166616438f0a5cc5cb6.png)
+
+黄色的点作为根节点，上面的点归左子树，下面的点归右子树，接下来再不断地划分，分割的那条线叫做分割超平面 (splitting hyperplane) ，在一维中是一个点，二维中是线，三维的是面。
+
+![image-20240214213006133](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/12582bafe53ea0764eed9be071bb7d4e.png)
+
+黄色节点就是Root节点，下一层是红色，再下一层是绿色，再下一层是蓝色
+
+![](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/7d481c1bfbc8bedc65eabf3f98cf5461.png)
+
+步骤
+
+1. 树的建立
+2. 最近邻域搜索
+
+kd树(K-dimension tree)是**一种对k维空间中的实例点进行存储以便对其进行快速检索的树形数据结构。**kd树是一种二叉树，表示对k维空间的一个划分，**构造kd树相当于不断地用垂直于坐标轴的超平面将K维空间切分，构成一系列的K维超矩形区域。**kd树的每个结点对应于一个k维超矩形区域。**利用kd树可以省去对大部分数据点的搜索，从而减少搜索的计算量。**
+
+![image-20240214220136306](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/0a5984708d4295e59f26cc4b09a42434.png)
+
+类比“二分查找”:给出一组数据:[9 1 4 7 2 5 0 3 8]，要查找8。如果挨个查找(线性扫描)，那么将会把数
+据集都遍历一遍。而如果排一下序那数据集就变成了:[0 1 2 3 4 5 6 7 8 9]，按前一种方式我们进行了很多没有必要的查找，现在如果我们以5为分界点，那么数据集就被划分为了左右两个“簇”[0 1 2 3 4]和[6 7 8 9]。
+
+因此，根本就没有必要进入第一个簇，可以直接进入第二个簇进行查找。把二分查找中的数据点换成k维数据点，这样的划分就变成了用超平面对k维空间的划分。空间划分就是对数据点进行分类，“挨得近”的数据点就在一个空间里面。
+
+
+
+#### 3.5.2 构造方法
+
+1. 构造根结点，使根结点对应于K维空间中包含所有实例点的超矩形区域;
+2. 通过递归的方法，不断地对k维空间进行切分，生成子结点。在超矩形区域上选择一个坐标轴和在此坐
+   标轴上的一个切分点，确定一个超平面，这个超平面通过选定的切分点并垂直于选定的坐标轴，将当前超矩
+   形区域切分为左右两个子区域 (子结点) ;这时，实例被分到两个子区域。
+3. 上述过程直到子区域内没有实例时终止(终止时的结点为叶结点)。在此过程中，将实例保存在相应
+   的结点上。
+4. 通常，循环的选择坐标轴对空间切分，选择训练实例点在坐标轴上的中位数为切分点，这样得到的kd
+   树是平衡的(平衡二叉树:它是一棵空树，或其左子树和右子树的深度之差的绝对值不超过1，且它的左子
+   树和右子树都是平衡二叉树)。
+
+KD树中每个节点是一个向量，和二叉树按照数的大小划分不同的是，KD树每层需要选定向量中的某一维，
+然后根据这一维按左小右大的方式划分数据。在构建KD树时，关键需要解决2个问题:
+
+1. 选择向量的哪一维进行划分;
+2. 如何划分数据;
+   第一个问题简单的解决方法可以是随机选择某一维或按顺序选择，但是更好的方法应该是在数据比较分散的
+   那一维进行划分 (分散的程度可以根据方差来衡量)。
+   第二个问题中，好的圳分方法可以使构建的树比较平衡，可以每次选择中位数来进行划分
+
