--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -836,22 +836,44 @@ kd树(K-dimension tree)是**一种对k维空间中的实例点进行存储以便
 
 #### 3.5.2 构造方法
 
-1. 构造根结点，使根结点对应于K维空间中包含所有实例点的超矩形区域;
-2. 通过递归的方法，不断地对k维空间进行切分，生成子结点。在超矩形区域上选择一个坐标轴和在此坐
-   标轴上的一个切分点，确定一个超平面，这个超平面通过选定的切分点并垂直于选定的坐标轴，将当前超矩
-   形区域切分为左右两个子区域 (子结点) ;这时，实例被分到两个子区域。
-3. 上述过程直到子区域内没有实例时终止(终止时的结点为叶结点)。在此过程中，将实例保存在相应
-   的结点上。
-4. 通常，循环的选择坐标轴对空间切分，选择训练实例点在坐标轴上的中位数为切分点，这样得到的kd
-   树是平衡的(平衡二叉树:它是一棵空树，或其左子树和右子树的深度之差的绝对值不超过1，且它的左子
-   树和右子树都是平衡二叉树)。
+1. **构造根结点，使根结点对应于K维空间中包含所有实例点的超矩形区域;**
+2. **通过递归的方法，不断地对k维空间进行切分，生成子结点。**在超矩形区域上选择一个坐标轴和在此坐标轴上的一个切分点，确定一个超平面，这个超平面通过选定的切分点并垂直于选定的坐标轴，将当前超矩形区域切分为左右两个子区域 (子结点) ;这时，实例被分到两个子区域。
+3. **上述过程直到子区域内没有实例时终止(终止时的结点为叶结点)。**在此过程中，将实例保存在相应的结点上。
+4. 通常，循环的选择坐标轴对空间切分，选择训练实例点在坐标轴上的中位数为切分点，这样得到的kd树是平衡的(平衡二叉树:它是一棵空树，或其左子树和右子树的深度之差的绝对值不超过1，且它的左子树和右子树都是平衡二叉树)。
 
 KD树中每个节点是一个向量，和二叉树按照数的大小划分不同的是，KD树每层需要选定向量中的某一维，
 然后根据这一维按左小右大的方式划分数据。在构建KD树时，关键需要解决2个问题:
 
-1. 选择向量的哪一维进行划分;
-2. 如何划分数据;
-   第一个问题简单的解决方法可以是随机选择某一维或按顺序选择，但是更好的方法应该是在数据比较分散的
-   那一维进行划分 (分散的程度可以根据方差来衡量)。
-   第二个问题中，好的圳分方法可以使构建的树比较平衡，可以每次选择中位数来进行划分
+1. **选择向量的哪一维进行划分;**
+2. **如何划分数据;**
+
+第一个问题简单的解决方法可以是随机选择某一维或按顺序选择，但是**更好的方法应该是在数据比较分散的那一维进行划分 (分散的程度可以根据方差来衡量)。**
+
+第二个问题中，好的圳分方法可以使构建的树比较平衡，可以每次选择中位数来进行划分
+
+
+
+### 3.6 案例鸢尾花种类预测
+
+
+
+# 第二部分-深度学习
+
+## 1. TensorFlow
+
+### 1.1 TensorFlow 介绍
+
+深度学习框架TensorFlow一经发布，就受到了广泛的关注，并在计算机视觉、音频处理、推荐系统和自然语言处理等场景下都被大面积推广使用，现在已发布2.3.0版本，接下来我们深入浅出的介绍Tensorflow的相关应用
+
+### 1.2 张量及其操作
+
+#### 1.2.1 张量Tensor
+
+张量是一个多维数组。与NumPy ndarray对象类似，tf.Tensor对象也具有数据类型和形状。如下图所示:
+
+![image-20240218205103768](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/76d229432a26653692bc7ee350263841.png)
+
+此外，tf.Tensors可以保留在GPU中。 TensorFlow提供了丰富的操作库 (tf.add，tf.matmul,tf.linalg.inv等)，它们使用和生成tf.Tensor。在进行张量操作之前先导入相应的工具包:
+
+#### 1.2.2 基本方法
 
