--- a/python/人工智能/人工智能.md
+++ b/python/人工智能/人工智能.md
@@ -877,3 +877,218 @@ KD树中每个节点是一个向量，和二叉树按照数的大小划分不同
 
 #### 1.2.2 基本方法
 
+1. 创建基础的张量
+
+```py
+import tensorflow as tf
+import numpy as np
+
+# 创建int32类型的0维张量，即标量
+rank_0_tensor = tf.constant(4)
+print(rank_0_tensor)
+# 创建float32类型的一维张量
+rank_1_tensor = tf.constant([2.0, 3.0, 4.0])
+print(rank_1_tensor)
+# 创建float16类型的二维张量
+rank_2_tensor = tf.constant([[1, 2], [3, 4], [5, 6]], dtype=tf.float16)
+print(rank_2_tensor)
+```
+
+输出结果
+
+```
+tf.Tensor(4, shape=(), dtype=int32)
+tf.Tensor([2. 3. 4.], shape=(3,), dtype=float32)
+tf.Tensor(
+[[1. 2.]
+ [3. 4.]
+ [5. 6.]], shape=(3, 2), dtype=float16)
+```
+
+![image-20240221133220188](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/aa8190184b16f7bfa0097e3abad4fed9.png)
+
+#### 1.2.3 转换为numpy
+
+- np.array
+
+```py
+np.array(rank_2_tensor)
+```
+
+- Tensor.numpy()
+
+```py
+rank_2_tensor.numpy()
+```
+
+
+
+#### 1.2.4 常用函数
+
+我们可以对张量做一些基本的数学运算、包括加法、元素乘法和矩阵乘法等
+
+```py
+# 定义张量a和b
+a = tf.constant([[1, 2], [3, 4]])
+b = tf.constant([[1, 1], [1, 1]])
+
+print(tf.add(a, b), "\n")  # 计算张量的和
+print(tf.multiply(a, b), "\n")  # 计算张量的元素乘法
+print(tf.matmul(a, b), "\n")  # 计算乘法
+```
+
+输出结果
+
+```
+tf.Tensor(
+[[2 3]
+ [4 5]], shape=(2, 2), dtype=int32) 
+
+tf.Tensor(
+[[1 2]
+ [3 4]], shape=(2, 2), dtype=int32) 
+
+tf.Tensor(
+[[3 3]
+ [7 7]], shape=(2, 2), dtype=int32)
+```
+
+另外张量也可用于各种聚合运算
+
+```py
+tf.reduce_sum()  # 求和
+tf.reduce_mean()  # 平均值
+tf.reduce_max()  # 最大值
+tf.reduce_min()  # 最小值
+tf.argmax()  # 最大值的索引
+tf.argmin()  # 最小值的索引
+```
+
+#### 1.2.5 变量
+
+变量是一种特殊的张量，形状是不可变，但可以改变其中的参数。定义时的方法是
+
+```py
+my_variable = tf.Variable([[1.0, 2.0], [3.0, 4.0]])
+```
+
+也可以获取它的形状，类型等
+
+```py
+print("Shape: ", my_variable.shape)
+print("DType: ", my_variable.dtype)
+```
+
+
+
+### 1.3 tf.keras介绍
+
+tf.keras是TensorFlow 2.0的高阶API接口，为TensorFlow的代码提供了新的风格和设计模式，大大提升了TF代码的简洁性和复用性，官方也推荐使用tf.keras来进行模型设计和开发。
+
+![image-20240221144351970](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/8b9627a45c2d42659e28c68bbbf57c58.png)
+
+#### 1.3.1 常用模块
+
+| 模块          | 概述                                                         |
+| ------------- | ------------------------------------------------------------ |
+| activations   | 激活函数                                                     |
+| applications  | 预训练网络模块                                               |
+| Callbacks     | 在模型训练期间被调用                                         |
+| datasets      | tf.keras数据集模块，包括boston_housing，cifar10，fashion_mnist，imdb，mnist |
+| layers        | Keras层API                                                   |
+| losses        | 各种损失函数                                                 |
+| metircs       | 各种评价指标                                                 |
+| models        | 模型创建模块，以及与模型相关的API                            |
+| optimizers    | 优化方法                                                     |
+| preprocessing | Keras数据的预处理模块                                        |
+| regularizers  | 正则化，L1,L2等                                              |
+| utils         | 辅助功能实现                                                 |
+
+#### 1.3.2 常用方法
+
+深度学习实现的主要流程: 1.数据获取，2.数据处理，3.模型创建与训练，4 模型测试与评估，5. 模型预测
+
+![image-20240221145024708](https://picgo-img-repo.oss-cn-beijing.aliyuncs.com/img/78940d29387a984c62e56a645bf30bda.png)
+
+1. 导入tf.keras
+
+使用`tf.keras`，首先需要在代码开始时导入`tf.keras`
+
+```py
+import tensorflow as tf
+from tensorflow import keras
+```
+
+2. 数据输入
+
+对于小的数据集，可以直接使用`numpy`格式的数据进行训练、评估模型，对于大型数据集或者要进行跨设备训练时使用`tf.data.datasets`来进行数据输入。
+
+3. 模型构建
+
+   - 简单模型使用Sequential进行构建
+
+   - 复杂模型使用函数式编程来构建
+
+   - 自定义layers
+
+4. 训练与评估
+
+   - 配置训练过程
+
+   ```py
+   # 配置优化方法，损失函数和评价指标
+   model.compile(optimizer=tf.train.AdamOptimizer(0.001),loss='categorical_crossentropy',metrics=['accuracy'])
+   ```
+
+   - 模型训练
+
+   ```py
+   # 指明训练数据集，训练epoch，批次大小和验证集数据
+   model.fit/fit_generator(dataset, epochs=10,batch_size=3,
+                          validation_data=val_dataset)
+   ```
+
+   - 模型评估
+
+   ```py
+   # 指明评估数据集和批次大小
+   model.evaluate(x, y, batch_size=32)
+   ```
+
+   - 模型预测
+
+   ```py
+   # 对新的样本进行预测
+   model.predict(x, batch_size=32)
+   ```
+
+5. 回调函数
+
+回调函数用在模型训练过程中，来控制模型训练行为，可以自定义回调函数，也可使用tf.keras.callbacks 内置的 callback:
+
+- ModelCheckpoint:定期保存 checkpoints。 
+- LearningRateScheduler: 动态改变学习速率。
+- EarlyStopping: 当验证集上的性能不再提高时，终止训练。
+- TensorBoard: 使用 TensorBoard 监测模型的状态
+
+6. 模型的保存和恢复
+
+   - 只保存参数
+
+   ```py
+   # 只保存模型的权重
+   model.save_weights('./my_model')
+   # 加载模型的权重
+   model.load_weights('my_model')
+   ```
+
+   - 保存整个模型
+
+   ```py
+   # 保存模型架构与权重在h5文件中
+   model.save('my_model.h5')
+   # 加载模型：包括架构与对应的权重
+   mode
+   ```
+
+   
